documentacao do procedimento de calculo para as calorias (cap. do relatorio)

--- a/report/relatorio-POO-CamposinhosOliveiraSantos.bib
+++ b/report/relatorio-POO-CamposinhosOliveiraSantos.bib
@@ -5,34 +5,67 @@
 	year = {2014},
 }
 
-@article{tree-adelson-62,
-    annote = {also available in translation as U.S. Dept. of Commerce OTS, JPRS 17,137; and as NASA Document N63-11777},
-    author = "Adelson-Velsky G. M.; Landis E. M.",
-    journal = {Doklady Akademii Nauk USSR},
-    number = {2},
-    pages = {263--266},
-    title = {{An Algorithm for the Organization of Information}},
-    volume = {146},
-    year = {1962}
+@misc{endomondo,
+  author = "Endomondo",
+  title = {Calories - calculation method},
+  note = "[Acedido em maio de 2014, publicado em maio de 2013]",
+  howpublished = "\url{http://gsfn.us/t/4183d}"
 }
 
-@misc{freeCode,
-  author = "nagydani (avatar)",
-  title = {AVL C Library},
-  note = "[Acedido em abril de 2014]",
-  howpublished = "\url{http://freecode.com/projects/avl}"
+@article{MHR,
+  title = "Age-predicted maximal heart rate revisited ",
+  journal = "Journal of the American College of Cardiology ",
+  volume = "37",
+  number = "1",
+  pages = "153 - 156",
+  year = "2001",
+  note = "",
+  issn = "0735-1097",
+  doi = "http://dx.doi.org/10.1016/S0735-1097(00)01054-8",
+  url = "http://www.sciencedirect.com/science/article/pii/S0735109700010548",
+  author = "Tanaka H.; Monahan K. D.; Seals D. R."
 }
 
-@misc{wikiHeaps,
-  author = "Wikipedia",
-  title = {Binary heap},
-  note = "[Acedido em abril de 2014]",
-  howpublished = "\url{http://en.wikipedia.org/wiki/Binary_heap}"
+@article{VO2max,
+  title = "Estimation of VO2max from the ratio between HRmax and HRrest--the Heart Rate Ratio Method",
+  journal = "European Journal of Applied Physiology",
+  volume = "91",
+  number = "1",
+  pages = "111 - 5",
+  year = "2004",
+  note = "",
+  author = "Uth N.; Sørensen H.; Overgaard K.; Pedersen PK." 
 }
 
-@misc{wikiHash,
-  author = "Wikipedia",
-  title = {Hash table},
-  note = "[Acedido em abril de 2014]",
-  howpublished = "\url{http://en.wikipedia.org/wiki/Hash_table}"
+@article{GCB,
+  title = "Prediction of energy expenditure from heart rate monitoring during submaximal exercise",
+  journal = "Journal of Sports Sciences",
+  volume = "23",
+  number = "3",
+  pages = "289 - 97",
+  year = "2005",
+  note = "",
+  author = "Keytel L.R.; Goedecke J.H.; Noakes T.D.; Hiiloskorpi H.; Laukkanen R.; van der Merwe L.; Lambert E.V." 
+}
+
+@article{NCB,
+  title = "A Biometric Study of Human Basal Metabolism",
+  journal = "Proceedings of the National Academy of Sciences USA",
+  volume = "4",
+  number = "12",
+  pages = "370–373",
+  year = "1918",
+  note = "",
+  author = "Harris J.A.; Benedict F.G." 
+}
+
+@article{compendium,
+  title = "2011 Compendium of Physical Activities: a second update of codes and MET values",
+  journal = "Medicine and Science in Sports and Exercise",
+  volume = "43",
+  number = "8",
+  pages = "1575-1581",
+  year = "2011",
+  note = "",
+  author = "Ainsworth BE; Haskell WL; Herrmann SD; Meckes N; Bassett Jr DR; Tudor-Locke C; Greer JL; Vezina J; Whitt-Glover MC; Leon AS" 
 }
