--- a/todo
+++ b/todo
@@ -1,7 +1,7 @@
 forma - done
-MET+intensidade nas atividades - ?         |
-Implementar tostring como abstrato, e nas Subclass|
-Implementar Clone nas subclass      ?
+MET+intensidade nas atividades - done
+Implementar tostring nas actividades - done
+Implementar Clone nas subclass - done
 apagar metodo compareRecord e getRecordSize nas actividades concretas ?
 Estatisticas
 ____________________________________|
