--- a/todo
+++ b/todo
@@ -2,8 +2,8 @@ forma - done
 MET+intensidade nas atividades - done
 Implementar tostring nas actividades - done
 Implementar Clone nas subclass - done
-apagar metodo compareRecord e getRecordSize nas actividades concretas ?
-Estatisticas
+apagar metodo compareRecord e getRecordSize nas actividades concretas - done
+Estatisticas done
 ____________________________________|
 
 ______________________________
