atualizacao indice relatorio

--- a/report/capa-POO-CamposinhosOliveira.tex
+++ b/report/capa-POO-CamposinhosOliveira.tex
@@ -17,7 +17,7 @@
 
 \vspace{2cm}
 
-\Large{\textbf{Grupo XXXX}}\\
+\Large{\textbf{Grupo 14}}\\
 \vspace{0.5cm}
 \normalsize{\textbf{Rui Camposinhos - a72625, Rui Oliveira - a67661, André Santos - a61778}}\\
 \vspace{0.5cm}
