--- a/report/relatorio-POO-CamposinhosOliveiraSantos.tex
+++ b/report/relatorio-POO-CamposinhosOliveiraSantos.tex
@@ -82,18 +82,29 @@
 \label{cap:intro}
 O presente projecto enquadra-se na unidade curricular de Programação Orientada a Objectos do curso de Licenciatura em Engenharia 
 Informática da Universidade do Minho.
-O projecto pretende implementar uma aplicação, designada \emph{FitnessUM}, para registar e simular actividades desportivas de fitness.
-A aplicação pretende foi desenvolvida em \emph{java} e pretende simular um ambiente de rede social.
+O projecto pretende implementar uma aplicação, designada \emph{FitnessUM}, para registar e simular actividades desportivas.
+A aplicação foi desenvolvida na linguagem \emph{java} e pretende simular um ambiente de rede social.
 
 \section{Objectivos}
 \label{sec:obj}
-(...)
+O presente projeto tem como objectivo principal consolidar e colocar em práctica os conceitos fundamentais transmitidos durante a UC de 
+Programação Orientada a Objectos.
 
-De acordo com o enunciado \cite{enunciado}, os principais objectivos definidos para a aplicação são os seguintes (\emph{requisitos}):
+De acordo com o enunciado \cite{enunciado}, os principais objectivos definidos para a aplicação \emph{FitnessUM} são os seguintes:
+
+\textbf{Requisitos básicos:}
 \begin{itemize}
-\item \textbf{req1:} (...);
-\item \textbf{req2:} (...); 
-\item (...); 
+\item Aceder à aplicação utilizando as credenciais (email e password);
+\item Visualizar a informação das actividades, do próprio e dos amigos, com possibilidade de aceder aos seus detalhes; 
+\item Registar a informação de uma actividade;
+\item Consultar, por ordem cronológica, e remover actividades;  
+\item Aceder às estatísticas de distância, tempo e calorias gastas;
+\end{itemize}
+
+\textbf{Requisitos de valorização:}
+\begin{itemize}
+\item Definir tipos de recordes e registar os recordes pessoais de cada utilizador;
+\item Definir eventos e proceder à sua simulação a partir dos administratores da aplicação.
 \end{itemize}
 
 \section{Organização do Relatório}
